# rust-fd

./: Cargo.toml  LICENSE  README.md  WARP.md  test_pattern_matching.sh
src/: main.rs
test_cases/: symlink_to_dir
